2020-01-15 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macro geda_get_widget_requisition when
      gtk_widget_get_preferred_size is not defined, as be the case for Gtk2
      and GSEAL_ENABLE is defined.

2020-01-14 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macros:

          * gtk_dialog_set_has_separator (When Gtk>2)
          * geda_toggle_button_set_active (Gtk 2 & 3)

    * src/dialogs/geda_file_chooser.c: Include geda_gtk_compat.h.

    * src/dialogs/geda_image_chooser.c: Include geda_gtk_compat.h, utilize
      geda_get_widget_allocation in chooser_adjust_size. Add conditional
      directives to skip calling gtk_range_set_update_policy if Gtk+3 or
      if GTK_DISABLE_DEPRECATED is defined.

    * src/functions/geda_container.c: Revise the conditional directive in
      get_allocation_coords to handle the case when GSEAL_ENABLE is defined.
      Revise tab_compare() to utilize geda_get_widget_allocation macro.

2020-01-13 Wiley E. Hill <wileyhill@gmail.com>

    * include/: Reluctantly include all gtk.h:

          * include/geda_bulb.h
          * include/geda_menu_item.h
          * include/geda_toggle_action.h
          * include/geda_tree.h
          * include/geda_tree_view.h

    * include/geda_gtk_compat.h: Revise Conditional directive to use Gtk+-3 macros
      if GSEAL_ENABLE is defined, add macros:

          * gtk_dialog_get_action_area (When Gtk<3)
          * geda_get_accel_group_is_locked (Gtk 2 & 3)
          * geda_toggle_button_get_active (Gtk 2 & 3)

2020-01-10 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macros geda_get_focus_widget.

    * src/functions/geda_container.c: Revise get_allocation_coords to utilize
      gtk_widget_get_allocation. Revise function find_old_focus to utilize
      accessor gtk_container_get_focus_child and eliminate use of goto. Revise
      old_focus_coords to verify the toplevel has focus, otherwise focus_widget